<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:shrinkColumns="false" >

    <TableRow
        android:padding="7dp" >
        <TextView
            android:layout_width="wrap_content"
            tools:text="Begin date:"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_gray"
            android:text="@string/pick_date"
            android:id="@+id/tvBeginDate" />

        <EditText
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_here"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="text"
            android:imeOptions="actionDone" />
    </TableRow>

    <TableRow
        android:padding="7dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="@string/sort"
            android:text="@string/sort"
            android:id="@+id/sort_order" />

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="wrap_content"
            android:entries="@array/choices_array"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/light_gray"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:paddingTop="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/news_desk"
            tools:text="News desk:"
            android:id="@+id/news_desk" />

        <CheckBox
            android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/arts" />
    </TableRow>

    <TableRow
        android:paddingLeft="7dp"
        android:paddingRight="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/empty" />

        <CheckBox
            android:id="@+id/checkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fashion_style" />
    </TableRow>

    <TableRow
        android:paddingLeft="7dp"
        android:paddingRight="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/emptytwo" />

        <CheckBox
            android:id="@+id/checkbox_sports"
            android:textColor="@color/dark_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sports" />
    </TableRow>

    <Button
        android:id="@+id/btnSaveFilters"
        android:gravity="center_horizontal"
        style="?android:attr/buttonStyleSmall"
        android:textColor="@color/dark_gray"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="Save"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancel"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        style="?android:attr/buttonStyleSmall"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dark_gray"
        tools:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</TableLayout>